updated fine-tuning code

--- a/finetune_bert.ipynb
+++ b/finetune_bert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -226,11 +226,11 @@
     "\n",
     "# Define training arguments\n",
     "training_args = TrainingArguments(\n",
-    "    evaluation_strategy = \"epoch\",\n",
+    "    eval_strategy = \"epoch\",\n",
     "    save_strategy = \"epoch\",\n",
     "    learning_rate=2e-5,\n",
-    "    per_device_train_batch_size=16,\n",
-    "    per_device_eval_batch_size=16,\n",
+    "    per_device_train_batch_size=256,\n",
+    "    per_device_eval_batch_size=256,\n",
     "    num_train_epochs=5,\n",
     "    weight_decay=0.01,\n",
     "    load_best_model_at_end=True,\n",
@@ -404,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
