Completed project files

--- a/xgboost_fasttext.ipynb
+++ b/xgboost_fasttext.ipynb
@@ -2,38 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "import os, re\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from random import shuffle\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "import fasttext\n",
     "from xgboost import XGBClassifier\n",
-    "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import (\n",
     "    GridSearchCV, GroupShuffleSplit, cross_val_score)\n",
     "from sklearn.metrics import accuracy_score"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Train on Word Embeddings\n",
-    "## Get Embeddings"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "import fasttext\n",
     "def preprocess_tweet(tweet):\n",
     "    tweet = tweet.lower()\n",
     "    # remove links\n",
@@ -47,6 +35,63 @@
     "    tweet = preprocess_tweet(tweet)\n",
     "    tweet = re.sub(\"\\n|\\r\", ' ', tweet)\n",
     "    return embedding_model.get_sentence_vector(tweet)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate Word Embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate Word Embeddings\n",
+    "df_train = pd.concat((pd.read_csv(\"data/train_tweets/\" + f)\n",
+    "                      for f in os.listdir(\"data/train_tweets\")),\n",
+    "                     ignore_index=True)\n",
+    "df_eval = pd.concat((pd.read_csv(\"data/eval_tweets/\" + f)\n",
+    "                      for f in os.listdir(\"data/eval_tweets\")),\n",
+    "                     ignore_index=True)\n",
+    "df = pd.concat((df_train, df_eval), ignore_index=True)\n",
+    "df.drop(columns=[\"Timestamp\"], inplace=True)\n",
+    "df.drop_duplicates(subset=\"Tweet\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Read 44M words\n",
+      "Number of words:  119313\n",
+      "Number of labels: 0\n",
+      "Progress: 100.0% words/sec/thread:  154272 lr:  0.000000 avg.loss:  1.743821 ETA:   0h 0m 0s\n"
+     ]
+    }
+   ],
+   "source": [
+    "df[\"Tweet\"] = df[\"Tweet\"].apply(preprocess_tweet)\n",
+    "df[\"Tweet\"].to_csv(\"data/tweets.txt\", index=False, header=False)\n",
+    "embedding_model = fasttext.train_unsupervised(\n",
+    "    \"data/tweets.txt\", model='cbow')\n",
+    "embedding_model.save_model(\"data/fasttext_model.bin\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train on Word Embeddings\n",
+    "## Get Embeddings"
    ]
   },
   {
@@ -91,26 +136,6 @@
    "source": [
     "train_df[\"Embedding\"] = train_df[\"Tweet\"].apply(lambda x: get_embedding(x, embedding_model))\n",
     "test_df[\"Embedding\"] = test_df[\"Tweet\"].apply(lambda x: get_embedding(x, embedding_model))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_df_backup = train_df.copy()\n",
-    "test_df_backup = test_df.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_df = train_df_backup.copy()\n",
-    "test_df = test_df_backup.copy()"
    ]
   },
   {
@@ -553,15 +578,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.7335096169850989 (+/- 0.048298032901688645)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "scores = cross_val_score(\n",
     "    grid_search.best_estimator_, X_train, y_train,\n",
@@ -1164,38 +1181,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_df_copy = test_df.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_df = test_df_copy.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_df[\"EventType\"] = xgbclf.predict(X_test)\n",
-    "test_df.drop(columns=[\"MatchID\", \"TweetRatio\", \"EmbedAVG\",\n",
-    "                      \"EmbedSTD\", \"EmbedPrev\", \"EmbedNext\"],\n",
-    "             inplace=True)\n",
     "test_df[\"MatchID\"] = test_df[\"ID\"].apply(lambda x: int(x.split(\"_\")[0]))\n",
     "test_df[\"PeriodID\"] = test_df[\"ID\"].apply(lambda x: int(x.split(\"_\")[1]))\n",
     "test_df.sort_values(by=[\"MatchID\", \"PeriodID\"], inplace=True)\n",
-    "test_df.drop(columns=[\"MatchID\", \"PeriodID\"], inplace=True)\n",
     "test_df[\"EventType\"] = test_df[\"EventType\"].apply(lambda x: float(x))\n",
-    "test_df.to_csv(\"data/xgboost_pred.csv\", index=False)"
+    "test_df.drop(columns=[\"MatchID\", \"PeriodID\" \"TweetRatio\",\n",
+    "                      \"EmbedAVG\", \"EmbedSTD\", \"EmbedPrev\", \"EmbedNext\"]\n",
+    "             ).to_csv(\"data/xgboost_pred.csv\", index=False)"
    ]
   },
   {
@@ -2107,24 +2104,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_df_copy = test_df.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_df = test_df_copy.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 74,
    "metadata": {},
    "outputs": [],
@@ -2136,24 +2115,6 @@
     "test_df.sort_values(by=[\"MatchID\", \"PeriodID\"], inplace=True)\n",
     "test_df.drop(columns=[\"MatchID\", \"PeriodID\"], inplace=True)\n",
     "test_df.to_csv(\"data/distilbert_xgboost_pred.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_df_copy = train_df.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_df = train_df_copy.copy()"
    ]
   },
   {
@@ -2173,7 +2134,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -2187,7 +2148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
